feat: add header structure to HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header section -->
+    <header>
+        <div class="header-container">
+        <h2>ZenCha</h2>
+        <ul>
+            <li class='header-links'><a href='#'>Shop</a></li>
+            <li class='header-links'><a href='#'>Subscription</a></li>
+            <li class='header-links'><a href='#'>Learn</a></li>
+        </ul>
+        </div>
+    </header>
     
 </body>
 </html>
