chore: add images folder and assets

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <!-- Header section -->
-    <header>
-        <div class="header-container">
+    <div class="header">
+        <div class="header container">
         <h2>ZenCha</h2>
         <ul>
             <li class='header-links'><a href='#'>Shop</a></li>
@@ -17,7 +17,18 @@
             <li class='header-links'><a href='#'>Learn</a></li>
         </ul>
         </div>
-    </header>
+    </div>
+    <!-- Hero section -->
+     <div class="hero">
+        <div class="hero container">
+            <div class="hero-left">
+                <h1>Discover the World of Tea, One Cup at a Time</h1>
+                <p>Explore handpicked teas from around the globe. From delicate white teas to bold pu-erh, find the perfect flavor for your mood and moment.</p>
+                <button>Find Your Tea</button>
+            </div>
+        </div>
+     </div>
+
     
 </body>
 </html>
