feat: add hero section structure to HTML

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <p>Explore handpicked teas from around the globe. From delicate white teas to bold pu-erh, find the perfect flavor for your mood and moment.</p>
                 <button>Find Your Tea</button>
             </div>
+            <div class="hero-right">
+                <img src="images/teapot.jpg" alt="teapot">
+            </div>
         </div>
      </div>
 
