--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="header container">
         <h2>ZenCha</h2>
         <ul>
-            <li class='header-links'><a href='#'>Shop</a></li>
-            <li class='header-links'><a href='#'>Subscription</a></li>
-            <li class='header-links'><a href='#'>Learn</a></li>
+            <li class="header-links"><a href="#"">Shop</a></li>
+            <li class="header-links"><a href="#">Subscription</a></li>
+            <li class="header-links"><a href="#"">Learn</a></li>
         </ul>
         </div>
     </div>
