--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button>Find Your Tea</button>
             </div>
             <div class="hero-right">
-                <img src="images/teapot.jpg" alt="teapot">
+                <img src="images/teapot.jpg" alt="teapot" class="teapot">
             </div>
         </div>
      </div>
