feat: finish base layout with header, hero, info, CTA and footer sections

--- a/index.html
+++ b/index.html
@@ -31,6 +31,54 @@
             </div>
         </div>
      </div>
+     <!-- Info section -->
+    <div class="info">
+        <div class="info container">
+            <h2>Our Popular Teas 🍵</h2>
+            <div class="info-item">
+                <img src="images/tea.jpg" alt="tea" class="info-img">
+                <h3>Pu-erh</h3>
+                <p>Earthy, rich taste; aged varieties develop complex, smooth flavors. From Yunnan province.</p>
+            </div>
+            <div class="info-item">
+                <img src="images/tea.jpg" alt="tea" class="info-img">
+                <h3>Tie Guan Yin</h3>
+                <p>Floral and creamy notes with a hint of orchid fragrance. Originates from Anxi, Fujian.</p>
+            </div>
+            <div class="info-item">
+                <img src="images/tea.jpg" alt="tea" class="info-img">
+                <h3>Jasmine Tea</h3>
+                <p>Fragrant and sweet, a soothing floral green tea blend. Commonly from Fujian.</p>
+            </div>
+        </div>
+    </div>
+    <!-- Quote section -->
+     <div class="quote">
+        <div class="quote container">
+            <div class="quote-item">
+                <h2>"Sharing tea with a fascinating stranger is one of life's true delights"</h2>
+                <p>-General Iroh</p>
+            </div>
+        </div>
+     </div>
+     <!-- Call to action section -->
+    <div class="cta">
+        <div class="cta container">
+            <div class="cta-item">
+                <h3>Experience the Art of Tea</h3>
+                <p>From misty mountains to your teacup — taste centuries of Chinese tea craftsmanship.</p>
+                <button>Buy Now</button>
+            </div>
+        </div>
+    </div>
+    <!-- Footer section -->
+     <div class="footer">
+        <div class="footer container">
+            <div class="footer-item">
+                <p>Copyright © ZenCha 2025 | Built by bul41k</p>
+            </div>
+        </div>
+     </div>
 
     
 </body>
