feat: complete call-to-action section layout and styling

--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
         <div class="cta container">
             <div class="cta-item">
                 <h3>Experience the Art of Tea</h3>
-                <p>From misty mountains to your teacup — taste centuries of Chinese tea craftsmanship.</p>
+                <p>From misty mountains to your teacup — taste centuries of Chinese tea craftsmanship.</p></div>
+                <div class="cta-item">
                 <button>Buy Now</button>
-            </div>
+                </div>
         </div>
     </div>
     <!-- Footer section -->
